test/trivial/bradc/undefinedfn2.good
Error: Unresolved call 'foo' (undefinedfn2.chpl:3)
