test/trivial/bradc/undefinedfn2.chpl
fun main() {
  var x = 1;
  foo(x);
}
